Added Global functions. The formslist and dataentry is not also working with location bound forms. Fixed issue in routing/publications.

--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -15,7 +15,7 @@
 
                         {{#if isLocationBound}}
                             {{#if isLocalUser}}
-                                <input type='hidden' id='static_location' value='{{userLocation}}'>
+                                <input type='hidden' id='static_location' value='{{userlocation}}'>
                             {{else}}
                                 <div class='control-group'>
                                     <label class='control-label'>Location:</label>
