--- a/client/stylesheets/pages.css
+++ b/client/stylesheets/pages.css
@@ -109,3 +109,9 @@
   height:100%;
   background-color:green;
 }
+
+.singleGraph .chartContainer {
+  width:100%;
+  height:400px;
+  margin:0 auto;
+}
