--- a/client/views/performance/performance.html
+++ b/client/views/performance/performance.html
@@ -4,110 +4,9 @@
             <header class="hero-unit">
                 <h1>Performance page!</h1>
 
-			    <h3>Filter</h3>
-
 			    {{initialize}}
 
-			    <form class='form-horizontal' onsubmit="return false">
-			        <fieldset>
-			        
-			            <div class='control-group'>
-			                <label class='control-label'>Start Date:</label>
-			                <div class='controls'>
-			                    <select id='start_year'>
-			                        <option value=''>--Select Year--</option>
-			                        <option value='2008'>2008</option>
-			                        <option value='2009'>2009</option>
-			                        <option value='2010'>2010</option>
-			                        <option value='2011'>2011</option>
-			                        <option value='2012'>2012</option>
-			                        <option value='2013'>2013</option>
-			                        <option value='2014'>2014</option>
-			                        <option value='2015'>2015</option>
-			                        <option value='2016'>2016</option>
-			                    </select>
-			                    <select id='start_month'>
-			                        <option value=''>--Select Month--</option>
-			                        <option value='1'>January</option>
-			                        <option value='2'>February</option>
-			                        <option value='3'>March</option>
-			                        <option value='4'>April</option>
-			                        <option value='5'>May</option>
-			                        <option value='6'>June</option>
-			                        <option value='7'>July</option>
-			                        <option value='8'>August</option>
-			                        <option value='9'>September</option>
-			                        <option value='10'>October</option>
-			                        <option value='11'>November</option>
-			                        <option value='12'>December</option>
-			                    </select>
-			                </div>
-			            </div>
-			            <div class='control-group'>
-			                <label class='control-label'>End Date:</label>
-			                <div class='controls'>
-			                    <select id='end_year'>
-			                        <option value=''>--Select Year--</option>
-			                        <option value='2008'>2008</option>
-			                        <option value='2009'>2009</option>
-			                        <option value='2010'>2010</option>
-			                        <option value='2011'>2011</option>
-			                        <option value='2012'>2012</option>
-			                        <option value='2013'>2013</option>
-			                        <option value='2014'>2014</option>
-			                        <option value='2015'>2015</option>
-			                        <option value='2016'>2016</option>
-			                    </select>
-			                    <select id='end_month'>
-			                        <option value=''>--Select Month--</option>
-			                        <option value='1'>January</option>
-			                        <option value='2'>February</option>
-			                        <option value='3'>March</option>
-			                        <option value='4'>April</option>
-			                        <option value='5'>May</option>
-			                        <option value='6'>June</option>
-			                        <option value='7'>July</option>
-			                        <option value='8'>August</option>
-			                        <option value='9'>September</option>
-			                        <option value='10'>October</option>
-			                        <option value='11'>November</option>
-			                        <option value='12'>December</option>
-			                    </select>
-			                </div>
-			            </div>
-			            <div class='control-group'>
-			                <label class='control-label'>Chart Type:</label>
-			                <div class='controls'>
-			                    <select id='chart_type'>
-			                        <option value='Line'>Line</option>
-			                        <option value='Bar'>Bar</option>
-			                        <option value='Pie'>Pie</option>
-			                    </select>
-			                </div>
-			            </div>
-			            <div class='control-group'>
-			                <label class='control-label'>Display:</label>
-			                <div class='controls'>
-			                    {{#each tags}}
-			                        <input type="checkbox" id="check_{{this.id}}" value="1" checked> {{this.label}}
-			                    {{/each}}
-			                </div>
-			            </div>
-
-			            <div class='control-group'>
-			                <div class='controls'>
-			                    <button class="btn btn-primary submit">
-			                        <i class="icon-user icon-white"></i> Submit
-			                    </button>
-			                </div>
-			            </div>
-
-			        </fieldset>
-			    </form>
-
-			    <h3>Chart</h3>
-
-			    <div class="chartDisplay" id="chartDisplay"></div>
+			    <div class="chartContainer" id="chartContainer"></div>
 
             </header>
         </div>
