--- a/client/views/performance/performance.html
+++ b/client/views/performance/performance.html
@@ -1,12 +1,11 @@
 <template name='performance'>
-	<div class="wrapper">
+	<div class="wrapper performance">
         <div class="container">
             <header class="hero-unit">
                 <h1>Performance page!</h1>
 
 			    {{initialize}}
-
-			    <div class="chartContainer" id="chartContainer"></div>
+			    {{> performanceGraphs}}
 
             </header>
         </div>
