Fixed routing for performances graphs. Temporary fix: will be replaced by configuration later.

--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -20,14 +20,14 @@
               <li class="{{active}} dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tachometer"></i> Performance<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="{{pathFor 'performance'}}">Moves per manhour</a></li>
-                  <li><a href="#">KwH Factor</a></li>
-                  <li><a href="#">Synchromodal Factor</a></li>
-                  <li><a href="#">Diesel Factor</a></li>
-                  <li><a href="#">Kg Co2_eq per move</a></li>
-                  <li><a href="#">Kg Co2_eq Terminal operation</a></li>
-                  <li><a href="#">KwH per Move</a></li>
-                  <li><a href="#">Terminal Liters per truckmove</a></li>
+                  <li><a href="/performance/mph">Moves per manhour</a></li>
+                  <li><a href="/performance/kwhfactor">KwH Factor</a></li>
+                  <li><a href="/performance">Synchromodal Factor</a></li>
+                  <li><a href="/performance">Diesel Factor</a></li>
+                  <li><a href="/performance">Kg Co2_eq per move</a></li>
+                  <li><a href="/performance">Kg Co2_eq Terminal operation</a></li>
+                  <li><a href="/performance">KwH per Move</a></li>
+                  <li><a href="/performance">Terminal Liters per truckmove</a></li>
                 </ul>
               </li>            
               <li class="{{active}} dropdown">
