Final version of the performance graph. Can be used for all graphs and bar charts. Updated the revenues page.

--- a/client/components/performance_graphs/performance_graphs.html
+++ b/client/components/performance_graphs/performance_graphs.html
@@ -1,7 +1,5 @@
 <template name='performanceGraphs'>
 	
-	{{initialize}}
-
-	<div class="chartContainer" id="chartContainer"></div>
+	{{{initialize}}}
 
 </template>
