--- a/client/components/single_graphs/single_graphs.html
+++ b/client/components/single_graphs/single_graphs.html
@@ -20,6 +20,6 @@
         {{/if}}
     {{/if}}
 
-    <div id="chartContainer" class="chartContainer"></div>
+    <div class="chartContainer2"></div>
 
 </template>
