--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -3,9 +3,16 @@
         <div class="container">
             <header class="hero-unit">
                 <h1>Revenues page!</h1>
-                
-                {{initialize_graph}}
-                {{> singleGraphs}}
+
+                {{{graph_2}}}
+
+                </br>
+
+                {{{graph_3}}}
+
+               </br>
+
+                {{{graph_1}}}
 
             </header>
         </div>
