Added Graphs to the moves page.

--- a/client/views/moves/moves.html
+++ b/client/views/moves/moves.html
@@ -4,8 +4,13 @@
             <header class="hero-unit">
                 <h1>Moves page!</h1>
 
-                {{initialize_graph}}
-                {{> singleGraphs}}
+                {{{graph_1}}}
+            	</br>
+            	{{{graph_2}}}
+            	</br>
+            	{{{graph_3}}}
+            	</br>
+            	{{{graph_4}}}
 
             </header>
         </div>
