Added bar charts to the moves page.

--- a/client/views/moves/moves.html
+++ b/client/views/moves/moves.html
@@ -12,6 +12,11 @@
             	</br>
             	{{{graph_4}}}
 
+            	</br>
+            	{{{graph_5}}}
+            	</br>
+            	{{{graph_6}}}
+
             </header>
         </div>
     </div>
