Added performances graphs

--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -23,11 +23,11 @@
                   <li><a href="/performance/mph">Moves per manhour</a></li>
                   <li><a href="/performance/kwhfactor">KwH Factor</a></li>
                   <li><a href="/performance">Synchromodal Factor</a></li>
-                  <li><a href="/performance">Diesel Factor</a></li>
+                  <li><a href="/performance/dieselfactor">Diesel Factor</a></li>
                   <li><a href="/performance">Kg Co2_eq per move</a></li>
                   <li><a href="/performance">Kg Co2_eq Terminal operation</a></li>
-                  <li><a href="/performance">KwH per Move</a></li>
-                  <li><a href="/performance">Terminal Liters per truckmove</a></li>
+                  <li><a href="/performance/kwhmove">KwH per Move</a></li>
+                  <li><a href="/performance/terminalliters">Terminal Liters per truckmove</a></li>
                 </ul>
               </li>            
               <li class="{{active}} dropdown">
