Changed chart theme. Layout changes in charts margin. Added padding below title. Removed the page! text from some page titles.

--- a/client/stylesheets/pages.css
+++ b/client/stylesheets/pages.css
@@ -110,6 +110,14 @@
   background-color:green;
 }
 
+.revenues .chart {
+  margin-bottom:80px;
+}
+.moves .chart {
+  margin-bottom:80px;
+}
+
+
 .singleGraph .chartContainer {
   width:100%;
   height:400px;
