--- a/client/views/moves/moves.html
+++ b/client/views/moves/moves.html
@@ -1,21 +1,27 @@
 <template name='moves'>
-	<div class="wrapper">
+	<div class="wrapper moves">
         <div class="container">
             <header class="hero-unit">
-                <h1>Moves page!</h1>
+                <h1>Moves</h1>
 
-                {{{graph_1}}}
-            	</br>
-            	{{{graph_2}}}
-            	</br>
-            	{{{graph_3}}}
-            	</br>
-            	{{{graph_4}}}
-
-            	</br>
-            	{{{graph_5}}}
-            	</br>
-            	{{{graph_6}}}
+                <div class="chart">
+                    {{{graph_1}}}
+            	</div>
+                <div class="chart">
+            	   {{{graph_2}}}
+            	</div>
+                <div class="chart">
+            	   {{{graph_3}}}
+            	</div>
+                <div class="chart">
+            	   {{{graph_4}}}
+            	</div>
+                <div class="chart">
+            	   {{{graph_5}}}
+            	</div>
+                <div class="chart">
+            	   {{{graph_6}}}
+                </div>
 
             </header>
         </div>
