--- a/client/views/performance/performance.html
+++ b/client/views/performance/performance.html
@@ -2,7 +2,7 @@
 	<div class="wrapper performance">
         <div class="container">
             <header class="hero-unit">
-                <h1>Performance page!</h1>
+                <h1>Performance</h1>
 
 			    {{initialize}}
 			    {{> performanceGraphs}}
