--- a/client/views/about/about.html
+++ b/client/views/about/about.html
@@ -2,7 +2,7 @@
 	 <div class="wrapper">
         <div class="container">
             <header class="hero-unit">
-                <h1>About page!</h1>
+                <h1>About</h1>
                 <p>A key performance indicator tool is a quantifiable metric that reflects how wel an organization has achieved it's stated goals and objectives.</p>
                 <p>This application enables a powerful tooling for your business intelligence solution. It quickly provides an overview of the health and direction of the organization from an operations and revenue driven dataset. Anticipate, analyze and act on Key Performance Indicators.</p>
                 <button type="button" class="btn btn-lg btn-info">More info</button>
