--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -2,17 +2,17 @@
 	 <div class="wrapper revenues">
         <div class="container">
             <header class="hero-unit">
-                <h1>Revenues page!</h1>
+                <h1>Revenues</h1>
 
-                {{{graph_2}}}
-
-                </br>
-
-                {{{graph_3}}}
-
-               </br>
-
-                {{{graph_1}}}
+                <div class="chart">
+                    {{{graph_2}}}
+                </div>
+                <div class="chart">
+                    {{{graph_3}}}
+                </div>
+                <div class="chart">
+                    {{{graph_1}}}
+                </div>
 
             </header>
         </div>
