--- a/client/views/moves/moves.html
+++ b/client/views/moves/moves.html
@@ -8,6 +8,9 @@
                     {{{graph_1}}}
             	</div>
                 <div class="chart">
+                    {{{graph_7}}}
+                </div>
+                <div class="chart">
             	   {{{graph_2}}}
             	</div>
                 <div class="chart">
