--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -8,7 +8,7 @@
             <div class="hero-unit">
                 <h1>{{formlabel}}</h1>
 
-                <form class='form-horizontal' action="/forms/{{formid}}">
+                <div class='form-horizontal'>
 
                     <fieldset>
 
@@ -111,7 +111,7 @@
 
                     </fieldset>
 
-                </form>
+                </div>
             </div>
 
         </div>
